RESOLVED FIXED171959
Null deref in WebPage::dictionaryPopupInfoForRange
https://bugs.webkit.org/show_bug.cgi?id=171959
Summary Null deref in WebPage::dictionaryPopupInfoForRange
Tim Horton
Reported 2017-05-10 18:12:57 PDT
Null deref in WebPage::dictionaryPopupInfoForRange
Attachments
Patch (2.63 KB, patch)
2017-05-10 18:13 PDT, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2017-05-10 18:13:14 PDT
Tim Horton
Comment 2 2017-05-10 21:53:41 PDT
Tim Horton
Comment 3 2018-01-10 23:03:01 PST
Ideally we would have fixed this for the WebKit1 copy of the code too :(
Note You need to log in before you can comment on or make changes to this bug.