Null deref in WebPage::dictionaryPopupInfoForRange https://bugs.webkit.org/show_bug.cgi?id=171959 <rdar://problem/20886282>

Reviewed by Beth Dakin.

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::dictionaryPopupInfoForRange):
Speculative fix for non-reproducible crash when the startContainer of
the range is in an anonymous node.


Canonical link: https://commits.webkit.org/188889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216652 268f45cc-cd09-0410-ab3c-d52691b4dbfc